やったこと ロゴの画像追加、TeamOCAの色変更、メンバー1の画像追加
次したいこと
ヘッダーの画像追加、メンバーとかの画像追加等

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <header class="header">
         <div class="header__container">
           <div class="header__logo">
-            <img src="" width="80px" alt="TeamOCAロゴ" />
+            <img src="img/logo.png" width="40px" alt="TeamOCAロゴ" />
           </div>
           <nav class="header__nav">
             <div class="nav-item"><a href="news.html">news</a></div>
@@ -27,6 +27,10 @@
   
       <section class="about">
         <h1 class="about__title">TeamOCA</h1>
+        <style>
+          .about__title{color: mediumseagreen;}
+          .about__description{color: white;}
+        </style>
         <p class="about__description">
           チームOCAの説明です。チームOCAの説明です。チームOCAの説明です。チームOCAの説明です。チームOCAの説明です。チームOCAの説明です。チームOCAの説明です。チームOCAの説明です。チームOCAの説明です。チームOCAの説明です。
         </p>
@@ -37,7 +41,7 @@
         <div class="members">
           <div class="member">
             <div class="member__image">
-              <img src="" alt="member1" />
+              <img src="img/member/member_01.jpeg" alt="member1" style="width: 100px;" />
             </div>
             <div class="member__name">member1</div>
           </div>
