つぎでおわり

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>TeamOCA</title>
   </head>
 
-  <body background="">
+  <body background="img/about.jpg">
     <div class="main-container">
       <!-- ヘッダー -->
       <header class="header">
@@ -42,6 +42,15 @@
           <div class="member">
             <div class="member__image">
               <img src="img/member/member_01.jpeg" alt="member1" style="width: 100px;" />
+              <img src="img/member/member_02.jpeg" alt="member2" style="width: 100px;" />
+              <img src="img/member/member_03.jpeg" alt="member3" style="width: 100px;" />
+              <img src="img/member/member_04.jpeg" alt="member4" style="width: 100px;" />
+              <img src="img/member/member_05.jpeg" alt="member5" style="width: 100px;" />
+              <img src="img/member/member_06.jpeg" alt="member6" style="width: 100px;" />
+              <img src="img/member/member_07.jpeg" alt="member7" style="width: 100px;" />
+              <img src="img/member/member_08.jpeg" alt="member8" style="width: 100px;" />
+              <img src="img/member/member_09.jpeg" alt="member9" style="width: 100px;" />
+              <img src="img/member/member_10.jpeg" alt="member10" style="width: 100px;" />
             </div>
             <div class="member__name">member1</div>
           </div>
@@ -53,9 +62,13 @@
         <div class="games">
           <div class="game">
             <div class="game__image">
-              <img src="" alt="GAME1" />
+              <img src="img/game/game_01.jpeg" alt="GAME1" style="width: 120px;" />
+              <img src="img/game/game_02.jpeg" alt="GAME2" style="width: 120px;" />
+              <img src="img/game/game_03.jpeg" alt="GAME3" style="width: 120px;" />
+              <img src="img/game/game_04.jpeg" alt="GAME4" style="width: 120px;" />
             </div>
-            <div class="game__name">GAME1</div>
+            <div class="game__name">game1
+            </div>
           </div>
         </div>
       </section>
