--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <header class="header">
         <div class="header__container">
           <div class="header__logo">
-            <img src="img/logo.png" width="40px" alt="TeamOCAロゴ" />
+            <img src="img/logo.png" width="60px" alt="TeamOCAロゴ" />
           </div>
           <nav class="header__nav">
             <div class="nav-item"><a href="news.html">news</a></div>
@@ -41,16 +41,16 @@
         <div class="members">
           <div class="member">
             <div class="member__image">
-              <img src="img/member/member_01.jpeg" alt="member1" style="width: 100px;" />
-              <img src="img/member/member_02.jpeg" alt="member2" style="width: 100px;" />
-              <img src="img/member/member_03.jpeg" alt="member3" style="width: 100px;" />
-              <img src="img/member/member_04.jpeg" alt="member4" style="width: 100px;" />
-              <img src="img/member/member_05.jpeg" alt="member5" style="width: 100px;" />
-              <img src="img/member/member_06.jpeg" alt="member6" style="width: 100px;" />
-              <img src="img/member/member_07.jpeg" alt="member7" style="width: 100px;" />
-              <img src="img/member/member_08.jpeg" alt="member8" style="width: 100px;" />
-              <img src="img/member/member_09.jpeg" alt="member9" style="width: 100px;" />
-              <img src="img/member/member_10.jpeg" alt="member10" style="width: 100px;" />
+              <img src="img/member/member_01.jpeg" alt="member1" />
+              <img src="img/member/member_02.jpeg" alt="member2" />
+              <img src="img/member/member_03.jpeg" alt="member3" />
+              <img src="img/member/member_04.jpeg" alt="member4" />
+              <img src="img/member/member_05.jpeg" alt="member5" />
+              <img src="img/member/member_06.jpeg" alt="member6" />
+              <img src="img/member/member_07.jpeg" alt="member7" />
+              <img src="img/member/member_08.jpeg" alt="member8" />
+              <img src="img/member/member_09.jpeg" alt="member9" />
+              <img src="img/member/member_10.jpeg" alt="member10" />
             </div>
             <div class="member__name">member1</div>
           </div>
