--- a/index.html
+++ b/index.html
@@ -24,59 +24,102 @@
           </nav>
         </div>
       </header>
-  
+
       <section class="about">
         <h1 class="about__title">TeamOCA</h1>
         <style>
-          .about__title{color: mediumseagreen;}
-          .about__description{color: white;}
+          .about__title {
+            color: mediumseagreen;
+          }
+          .about__description {
+            color: white;
+          }
         </style>
         <p class="about__description">
           チームOCAの説明です。チームOCAの説明です。チームOCAの説明です。チームOCAの説明です。チームOCAの説明です。チームOCAの説明です。チームOCAの説明です。チームOCAの説明です。チームOCAの説明です。チームOCAの説明です。
         </p>
       </section>
-  
+
       <section class="member-section">
         <h2 class="section-title">MEMBER</h2>
         <div class="members">
           <div class="member">
             <div class="member__image">
               <img src="img/member/member_01.jpeg" alt="member1" />
-              <img src="img/member/member_02.jpeg" alt="member2" />
-              <img src="img/member/member_03.jpeg" alt="member3" />
-              <img src="img/member/member_04.jpeg" alt="member4" />
-              <img src="img/member/member_05.jpeg" alt="member5" />
-              <img src="img/member/member_06.jpeg" alt="member6" />
-              <img src="img/member/member_07.jpeg" alt="member7" />
-              <img src="img/member/member_08.jpeg" alt="member8" />
-              <img src="img/member/member_09.jpeg" alt="member9" />
-              <img src="img/member/member_10.jpeg" alt="member10" />
+              <div class="member__name"><p>member1</p></div>
             </div>
-            <div class="member__name">member1</div>
           </div>
+          <div class="member">
+            <div class="member__image">
+              <img src="img/member/member_02.jpeg" alt="member2" />
+              <div class="member__name">member2</div>
+            </div>
+          </div>
+          <div class="member">
+            <div class="member__image">
+              <img src="img/member/member_03.jpeg" alt="member3" />
+              <div class="member__name">member3</div>
+            </div>
+          </div>
+          <div class="member">
+            <div class="member__image">
+              <img src="img/member/member_04.jpeg" alt="member4" />
+              <div class="member__name">member4</div>
+            </div>
+          </div>
+          <div class="member">
+            <div class="member__image">
+              <img src="img/member/member_05.jpeg" alt="member5" />
+              <div class="member__name">member5</div>
+            </div>
+          </div>
+          <div class="member">
+            <div class="member__image">
+              <img src="img/member/member_06.jpeg" alt="member6" />
+              <div class="member__name">member6</div>
+            </div>
+          </div>
+          <img src="img/member/member_07.jpeg" alt="member7" />
+          <img src="img/member/member_08.jpeg" alt="member8" />
+          <img src="img/member/member_09.jpeg" alt="member9" />
+          <img src="img/member/member_10.jpeg" alt="member10" />
         </div>
       </section>
-  
+
       <section class="game-section">
         <h2 class="section-title">GAMETITLE</h2>
         <div class="games">
           <div class="game">
             <div class="game__image">
-              <img src="img/game/game_01.jpeg" alt="GAME1" style="width: 120px;" />
-              <img src="img/game/game_02.jpeg" alt="GAME2" style="width: 120px;" />
-              <img src="img/game/game_03.jpeg" alt="GAME3" style="width: 120px;" />
-              <img src="img/game/game_04.jpeg" alt="GAME4" style="width: 120px;" />
+              <img
+                src="img/game/game_01.jpeg"
+                alt="GAME1"
+                style="width: 120px"
+              />
+              <img
+                src="img/game/game_02.jpeg"
+                alt="GAME2"
+                style="width: 120px"
+              />
+              <img
+                src="img/game/game_03.jpeg"
+                alt="GAME3"
+                style="width: 120px"
+              />
+              <img
+                src="img/game/game_04.jpeg"
+                alt="GAME4"
+                style="width: 120px"
+              />
             </div>
-            <div class="game__name">game1
-            </div>
+            <div class="game__name">game1</div>
           </div>
         </div>
       </section>
-  
+
       <section class="contact-section">
         <h2 class="section-title">CONTACT</h2>
       </section>
     </div>
   </body>
-  
 </html>
