できるとこまでやった

--- a/index.html
+++ b/index.html
@@ -52,38 +52,57 @@
           <div class="member">
             <div class="member__image">
               <img src="img/member/member_02.jpeg" alt="member2" />
-              <div class="member__name">member2</div>
+              <div class="member__name"><p>member2</p></div>
             </div>
           </div>
           <div class="member">
             <div class="member__image">
               <img src="img/member/member_03.jpeg" alt="member3" />
-              <div class="member__name">member3</div>
+              <div class="member__name"><p>member3</p></div>
             </div>
           </div>
           <div class="member">
             <div class="member__image">
               <img src="img/member/member_04.jpeg" alt="member4" />
-              <div class="member__name">member4</div>
+              <div class="member__name"><p>member4</p></div>
             </div>
           </div>
           <div class="member">
             <div class="member__image">
               <img src="img/member/member_05.jpeg" alt="member5" />
-              <div class="member__name">member5</div>
+              <div class="member__name"><p>member5</p></div>
             </div>
           </div>
           <div class="member">
             <div class="member__image">
               <img src="img/member/member_06.jpeg" alt="member6" />
-              <div class="member__name">member6</div>
+              <div class="member__name"><p>member6</p></div>
             </div>
           </div>
-          <img src="img/member/member_07.jpeg" alt="member7" />
-          <img src="img/member/member_08.jpeg" alt="member8" />
-          <img src="img/member/member_09.jpeg" alt="member9" />
-          <img src="img/member/member_10.jpeg" alt="member10" />
-        </div>
+          <div class="member">
+            <div class="member__image">
+              <img src="img/member/member_07.jpeg" alt="member7" />
+              <div class="member__name"><p>member7</p></div>
+            </div>
+          </div>
+          <div class="member">
+            <div class="member__image">
+              <img src="img/member/member_08.jpeg" alt="member8" />
+              <div class="member__name"><p>member8</p></div>
+            </div>
+          </div>
+          <div class="member">
+            <div class="member__image">
+              <img src="img/member/member_09.jpeg" alt="member9" />
+              <div class="member__name"><p>member9</p></div>
+            </div>
+          </div>
+          <div class="member">
+            <div class="member__image">
+              <img src="img/member/member_10.jpeg" alt="member10" />
+              <div class="member__name"><p>member10</p></div>
+            </div>
+          </div>
       </section>
 
       <section class="game-section">
@@ -91,28 +110,27 @@
         <div class="games">
           <div class="game">
             <div class="game__image">
-              <img
-                src="img/game/game_01.jpeg"
-                alt="GAME1"
-                style="width: 120px"
-              />
-              <img
-                src="img/game/game_02.jpeg"
-                alt="GAME2"
-                style="width: 120px"
-              />
-              <img
-                src="img/game/game_03.jpeg"
-                alt="GAME3"
-                style="width: 120px"
-              />
-              <img
-                src="img/game/game_04.jpeg"
-                alt="GAME4"
-                style="width: 120px"
-              />
+              <img src="img/game/game_01.jpeg"alt="GAME1" />
+              <div class="game__name"><p>game1</p></div>
             </div>
-            <div class="game__name">game1</div>
+          </div>
+          <div class="game">
+            <div class="game__image">
+             <img src="img/game/game_02.jpeg" alt="GAME2"/>
+             <div class="game__name"><p>game2</p></div>
+            </div>
+          </div>
+          <div class="game">
+            <div class="game__image">
+              <img src="img/game/game_03.jpeg" alt="GAME3" />
+              <div class="game__name"><p>game3</p></div>
+            </div>
+          </div>
+          <div class="game">
+            <div class="game__image">
+              <img src="img/game/game_04.jpeg" alt="GAME4"/>
+              <div class="game__name"><p>game4</p></div>
+            </div>
           </div>
         </div>
       </section>
